gtk3 packaging fixes, still wip

--- a/debian/control
+++ b/debian/control
@@ -66,8 +66,7 @@ Conflicts: gir1.0-appindicator-0.1
 Replaces: gir1.0-appindicator-0.1
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
+Depends: ${misc:Depends},
          ${gir:Depends}
 Description: Typelib files for libappindicator1.
  .
@@ -99,6 +98,42 @@ Description:  Application Indicators
  .
  This package contains developer documentation.
 
+Package: libappindicator3-1
+Section: libs
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends}
+Recommends: indicator-application (= ${binary:Version})
+Description: Application Indicators
+ A library and indicator to take menus from applications and place them in
+ the panel.
+ .
+ This package contains shared libraries to be used by applications.
+
+Package: libappindicator3-dev
+Section: libdevel
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+         libdbusmenu-glib-dev (>= 0.1.8),
+         libdbus-glib-1-dev (>= 0.76),
+         libappindicator3-1 (= ${binary:Version})
+Description: Application Indicators
+ A library and indicator to take menus from applications and place them in
+ the panel.
+ .
+ This package contains files that are needed to build applications.
+
+Package: gir1.2-appindicator3-0.1
+Section: libs
+Architecture: any
+Depends: ${misc:Depends},
+         ${gir:Depends}
+Description: Typelib files for libappindicator3-1.
+ .
+ This package can be used by other packages using the GIRepository format
+ to generate dynamic bindings.
+
 Package: libappindicator0.1-cil
 Section: cli-mono
 Architecture: all
@@ -129,43 +164,3 @@ Description: Application Indicators
  the panel.
  .
  This package contains files that are needed to build applications.
-
-Package: libappindicator3-1
-Section: libs
-Architecture: any
-Depends: ${shlibs:Depends},
-         ${misc:Depends}
-Recommends: indicator-application (= ${binary:Version})
-Description: Application Indicators
- A library and indicator to take menus from applications and place them in
- the panel.
- .
- This package contains shared libraries to be used by applications.
-
-Package: libappindicator3-dev
-Section: libdevel
-Architecture: any
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
-         libdbusmenu-glib-dev (>= 0.1.8),
-         libdbus-glib-1-dev (>= 0.76),
-         libappindicator3-1 (= ${binary:Version})
-Description: Application Indicators
- A library and indicator to take menus from applications and place them in
- the panel.
- .
- This package contains files that are needed to build applications.
-
-Package: gir1.2-appindicator3-0.1
-Section: libs
-Architecture: any
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
-         ${gir:Depends}
-Description: Typelib files for libappindicator3-1.
- .
- This package can be used by other packages using the GIRepository format
- to generate dynamic bindings.
-
-
-
