--- a/debian/control
+++ b/debian/control
@@ -54,7 +54,7 @@ Section: libs
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends}
-Recommends: indicator-application (= ${binary:Version})
+Recommends: indicator-application (>= 0.2.93)
 Description: Application Indicators
  A library and indicator to take menus from applications and place them in
  the panel.
@@ -90,8 +90,7 @@ Description: Application Indicators
 Package: libappindicator-doc
 Section: doc
 Architecture: all
-Depends: ${shlibs:Depends},
-         ${misc:Depends}
+Depends: ${misc:Depends}
 Description:  Application Indicators
  A library and indicator to take menus from applications and place them in
  the panel.
@@ -103,7 +102,7 @@ Section: libs
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends}
-Recommends: indicator-application (= ${binary:Version})
+Recommends: indicator-application (>= 0.2.93)
 Description: Application Indicators
  A library and indicator to take menus from applications and place them in
  the panel.
