--- a/debian/control
+++ b/debian/control
@@ -30,6 +30,7 @@ Build-Depends: debhelper (>= 7.0),
                libgirepository1.0-dev,
                gir1.2-glib-2.0,
                gir1.2-gtk-2.0,
+               gir1.2-gtk-3.0,
                valac-0.12
 Standards-Version: 3.9.1
 Homepage: https://launchpad.net/libappindicator
