--- a/debian/rules
+++ b/debian/rules
@@ -60,10 +60,10 @@ install-stamp:
 	$(MAKE) -C $(DEB_BUILDDIR) install DESTDIR=$(CURDIR)/debian/tmp
 	touch $@
 
-binary-install/libappindicator1:: install-stamp install-gtk3-stamp
+binary-install/libappindicator1:: install-stamp install-stamp-gtk3
 	dh_makeshlibs DEB_DH_MAKESHLIBS_ARGS_libappindicator1
 
-configure-gtk3-stamp:
+configure-stamp-gtk3:
 	: # configure for GTK+ 3.0
 	set -e; \
 	rm -rf build-gtk3; \
@@ -75,21 +75,21 @@ configure-gtk3-stamp:
 	cd ..;
 	touch $@
 
-configure/libappindicator3-1:: configure-gtk3-stamp
+configure/libappindicator3-1:: configure-stamp-gtk3
 
-build-gtk3-stamp:
+build-stamp-gtk3:
 	: # build for GTK+ 3.0
 	$(MAKE) -C build-gtk3/src;
 	touch $@
 
-build/libappindicator3-1:: build-gtk3-stamp
+build/libappindicator3-1:: build-stamp-gtk3
 
-install-gtk3-stamp:
+install-stamp-gtk3:
 	: # install for GTK+ 3.0
 	$(MAKE) -C build-gtk3/src DESTDIR=$(CURDIR)/debian/tmp install
 	touch $@
 
-binary-install/libappindicator3-1:: install-gtk3-stamp
+binary-install/libappindicator3-1:: install-stamp-gtk3
 	dh_makeshlibs DEB_DH_MAKESHLIBS_ARGS_libappindicator3_1
 
 binary-install/libappindicator0.1-cil:: binary-fixup/libappindicator1
@@ -114,8 +114,10 @@ common-binary-predeb-arch:: list-missing
 	dh_strip
 
 clean::
-	-rm -rf $(addprefix build-, $(PY_VERSIONS))
-	-rm -rf $(addprefix configure-stamp-, $(PY_VERSIONS))
-	-rm -rf $(addprefix build-stamp-, $(PY_VERSIONS))
-	-rm -rf $(addprefix install-stamp-, $(PY_VERSIONS))
+	rm -f configure-stamp*
+	rm -f build-stamp*
+	rm -f install-stamp*
+	rm -rf build
+	rm -rf build-gtk3
+	rm -rf build-python*
 	rm -rf $(MONO_SHARED_DIR)/.wapi
