--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ XS-Python-Version: all
 Maintainer: Ubuntu Desktop Team <ubuntu-desktop@lists.ubuntu.com>
 Build-Depends: debhelper (>= 7.0),
                cdbs (>= 0.4.41),
+               quilt,
                libgtk2.0-dev (>= 2.12.0),
                libgtk-3-dev (>= 2.91.3),
                libdbus-glib-1-dev (>= 0.82),
