--- a/debian/rules
+++ b/debian/rules
@@ -11,6 +11,7 @@ export CSC=/usr/bin/mono-csc
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/gnome.mk
 include /usr/share/cdbs/1/rules/utils.mk
+include /usr/share/cdbs/1/rules/patchsys-quilt.mk
 
 API_VERSION = 0.1
 
