configure.ac: Generate xz tarballs with pax format by default

--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ AC_PREREQ([2.64])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 
-AM_INIT_AUTOMAKE([1.11])
+AM_INIT_AUTOMAKE([1.11 -Wall tar-ustar no-dist-gzip dist-xz])
 
 AM_MAINTAINER_MODE([enable])
 
