Fixed comments to correctly work with g-ir-scanner
No more missing transfer warning (and relative missing
bindings for some getting functions).

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -148,6 +148,7 @@ INTROSPECTION_COMPILER_ARGS = --includedir=$(builddir)
 if HAVE_INTROSPECTION
 
 introspection_sources = \
+	$(addprefix $(srcdir)/,app-indicator.c) \
 	$(addprefix $(srcdir)/,$(libappindicator_headers))
 
 AppIndicator$(VER)-0.1.gir: libappindicator$(VER).la
