Bring along custom and grab from srcdir

--- a/bindings/vala/Makefile.am
+++ b/bindings/vala/Makefile.am
@@ -28,10 +28,13 @@ $(vapiprefix).vapi: $(top_builddir)/src/AppIndicator$(VER)-0.1.gir \
                     $(vapiprefix)-custom.vala \
                     $(vapiprefix).deps
 	$(VALA_API_GEN) --library=$(vapiprefix) --girdir=$(srcdir)/src \
-	$< $(vapiprefix)-custom.vala
+	$< $(srcdir)/$(vapiprefix)-custom.vala
 	
 
 CLEANFILES = $(vapi_DATA)
 
 endif
 endif
+
+EXTRA_DIST = \
+	appindicator-0.1-custom.vala
