Switching out the prefix for a fixed name

--- a/bindings/vala/Makefile.am
+++ b/bindings/vala/Makefile.am
@@ -28,7 +28,7 @@ $(vapiprefix).vapi: $(top_builddir)/src/AppIndicator$(VER)-0.1.gir \
                     $(vapiprefix)-custom.vala \
                     $(vapiprefix).deps
 	$(VALA_API_GEN) --library=$(vapiprefix) --girdir=$(srcdir)/src \
-	$< $(srcdir)/$(vapiprefix)-custom.vala
+	$< $(srcdir)/appindicator-0.1-custom.vala
 	
 
 CLEANFILES = $(vapi_DATA)
