--- a/docs/reference/libappindicator-docs.sgml.in
+++ b/docs/reference/libappindicator-docs.sgml.in
@@ -25,6 +25,10 @@
     <title>API Index</title>
     <xi:include href="xml/api-index-full.xml"><xi:fallback /></xi:include>
   </index>
+  <index id="api-index-0-5">
+    <title>API 0.5 Index</title>
+    <xi:include href="xml/api-index-0.5.xml"><xi:fallback /></xi:include>
+  </index>
   <index id="api-index-deprecated">
     <title>Deprecated API Index</title>
     <xi:include href="xml/api-index-deprecated.xml"><xi:fallback /></xi:include>
