--- a/debian/rules
+++ b/debian/rules
@@ -15,6 +15,8 @@ include /usr/share/cdbs/1/rules/patchsys-quilt.mk
 
 API_VERSION = 0.1
 
+DEB_MAKE_CHECK_TARGET := check
+
 DEB_CONFIGURE_EXTRA_FLAGS += --disable-scrollkeeper --enable-gtk-doc --enable-introspection
 
 configure-stamp-%:
