--- a/configure.ac
+++ b/configure.ac
@@ -216,6 +216,19 @@ AC_ARG_ENABLE([tests],
 AM_CONDITIONAL([WANT_TESTS], [test "x$enable_tests" != "xno"])
 
 ###########################
+# gcov coverage reporting
+###########################
+
+m4_include([m4/gcov.m4])
+AC_TDD_GCOV
+AM_CONDITIONAL([HAVE_GCOV], [test "x$ac_cv_check_gcov" = xyes])
+AM_CONDITIONAL([HAVE_LCOV], [test "x$ac_cv_check_lcov" = xyes])
+AM_CONDITIONAL([HAVE_GCOVR], [test "x$ac_cv_check_gcovr" = xyes])
+AC_SUBST(COVERAGE_CFLAGS)
+AC_SUBST(COVERAGE_CXXFLAGS)
+AC_SUBST(COVERAGE_LDFLAGS)
+
+###########################
 # Files
 ###########################
 
@@ -256,4 +269,5 @@ Libappindicator Configuration:
 	GTK+ Version:  $with_gtk
 	Tests:         $enable_tests
 	Mono tests:    $have_nunit
+	gcov:	       $use_gcov
 ])
