make building mono extension optional, so we can build on archs that do not have mono

--- a/bindings/Makefile.am
+++ b/bindings/Makefile.am
@@ -1,10 +1,12 @@
 if USE_GTK3
 SUBDIRS =	\
-	mono	\
 	vala
 else
 SUBDIRS =		\
-	mono		\
 	python		\
 	vala
+endif
+
+if HAS_MONO
+SUBDIRS += mono
 endif
