don't include build-time filenames in comments of the enum header files
If we do, the header files may be different on each build.
This is especially harmful when building multiple times for multiple
architectures and expecting the files to be identical.

--- a/src/app-indicator-enum-types.c.in
+++ b/src/app-indicator-enum-types.c.in
@@ -32,7 +32,7 @@ License version 3 and version 2.1 along with this program.  If not, see
 /*** END file-header ***/
 
 /*** BEGIN file-production ***/
-#include "@filename@"
+#include "@basename@"
 /*** END file-production ***/
 
 /*** BEGIN value-header ***/
